--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
             <p>Progress bar</p>
             <div class="progress_bar_content">
                 <svg>
-                    <circle class="ring" r="45" cx="50" cy="50" />
+                    <circle class="ring" r="80" cx="100" cy="100" />
                 </svg>
                 <div class="progress_bar_content_switches">
                     <div class="progress_bar_content_switches_normal">
-                        <input type="number" onchange="Number()" id="number"><p>Value</p>
+                        <input type="number" onchange="checkBoxNumber()" id="number"><p>Value</p>
                     </div>
                     <div class="progress_bar_content_switches_animated">
                         <input type="checkbox" onchange="Animated()" id="Animated"><p>Animated</p>
